<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swarm_simulation</name>
  <version>0.1.0</version>
  <description>Gazebo simulation worlds and launch files for Swarm-Architect.</description>
  <maintainer email="bahattinyunus@example.com">Bahattin Yunus Çetin</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
